💄 fix(contentmeta): prevent views display broken css

--- a/src/components/ContentMeta/style.module.css
+++ b/src/components/ContentMeta/style.module.css
@@ -7,6 +7,15 @@
 	color: #888888;
 }
 
+@media screen and (max-width: 410px){
+	.container{
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: flex-start;
+		gap: 6px;
+	}
+}
+
 .container p{
   display: flex;
   gap: 6px;
